タスク管理アプリ課題完了

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,3 +3,11 @@
 .button-group{
     display: flex;
 }
+
+.task-index{
+    display: flex;
+}
+
+.task-index > *:not(:last-child){
+    margin-right: 10px;
+}
